2008-02-04  Magnus Henoch  <mange@freemail.hu>

	* url-expand.el: Require cl when compiling, for setf.

2008-01-29  John Wiegley  <johnw@newartisans.com>

	* url-auth.el (url-digest-auth): If the 'opaque' argument is not
	being used, don't add it to the response text.  Also, changed an
	if so that the interaction between the PROMPT and OVERWRITE
	arguments can no longer result in the user being queried twice for
	the same login and password information.

2008-01-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* url-handlers.el (unhandled-file-name-directory): Add handler.
	(url-handler-unhandled-file-name-directory): New fun.

2008-01-07  Michael Albinus  <michael.albinus@gmx.de>

	* url-handlers.el (url-file-handler): Autoload.

2007-12-11  Glenn Morris  <rgm@gnu.org>

	* url.el (url-configuration-directory): Make it a defcustom.

	* url-util.el (url-make-private-file): New function.
	* url-cookie.el (url-cookie-write-file):
	* url-history.el (url-history-save-history):
	Use url-make-private-file and with-temp-buffer.

2007-12-06  Glenn Morris  <rgm@gnu.org>

	* url-file.el, url-mailto.el: Remove directory part from filenames
	in function declarations.

2007-12-02  Glenn Morris  <rgm@gnu.org>

	* url-about.el, url-handlers.el: Don't require cl when compiling.

	* url-dav.el (url-dav-delete-directory): Fix message typo.

	* url-history.el (top-level): Don't require cl when compiling.
	(url-history-setup-save-timer, url-history-save-history):
	Use condition-case rather than ignore-errors.

	* url-imap.el (top-level): Don't require cl when compiling.
	(url-imap): Use signal rather than check-type.

	* url-news.el (top-level): Don't require cl when compiling.
	(gnus-group-buffer): Define for compiler.
	(url-news-fetch-message-id): Don't use `declare'.
	(nntp-open-tls-stream, nntp-open-ssl-stream):
	No need to define for compiler.
	(url-snews): Use nntp-open-tls-stream unless ssl is requested.
	Correct quoting of nntp-open-connection-function value.
